# b2ge

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
documents/: b2ge.puml
example/: CMakeLists.txt  Makefile  main.cpp
example/b2ge/: Util.hpp
example/b2ge/Core/: ClassIdHandler.hpp  Config.hpp
example/b2ge/Manager/: EntityManager.hpp
example/cmake/Modules/: FindB2GE.cmake
example/include/: Game.hpp  MainScene.hpp  Resources.hpp
example/include/Scene/: Gameplay.hpp
example/lib/b2ge/Core/: SystemUpdatable.hpp
example/lib/b2ge/Manager/: SystemManager.hpp
example/lib/b2ge/Util/: Debug.hpp
example/src/: Game.cpp  main.cpp
example/src/Scene/: Gameplay.cpp  MainScene.cpp
include/b2ge/: Core.hpp  Manager.hpp  Util.hpp  b2ge.hpp
include/b2ge/Component/: AnimatedSpriteRenderer.hpp  Button.hpp  Sprite.hpp  SpriteRenderer.hpp  Text.hpp  TextButton.hpp  Transform.hpp
include/b2ge/Core/: BaseGame.hpp  ClassIdHandler.hpp  Component.hpp  ComponentIdHandler.hpp  Config.hpp  Entity.hpp  Scene.hpp  System.hpp  SystemDrawable.hpp  SystemEventable.hpp  SystemUpdatable.hpp  World.hpp
include/b2ge/Manager/: EntityManager.hpp  ResourceManager.hpp  SceneManager.hpp  SystemManager.hpp
include/b2ge/System/: AnimatedSpriteRendererSystem.hpp  ButtonSystem.hpp  SpriteRendererSystem.hpp  SpriteSystem.hpp  TextButtonSystem.hpp  TextSystem.hpp
include/b2ge/Util/: Debug.hpp  NonCopyable.hpp  Singleton.hpp
project-template/: CMakeLists.txt
project-template/lib/b2ge/: Core.hpp  Manager.hpp
project-template/lib/b2ge/Core/: System.hpp  World.hpp
project-template/lib/b2ge/Util/: NonCopyable.hpp
sample/b2ge/: b2ge.hpp
sample/b2ge/Core/: Component.hpp  Entity.hpp  SystemUpdatable.hpp
sample/b2ge/Manager/: SystemManager.hpp
src/b2ge/Component/: AnimatedSpriteRenderer.cpp  Buttton.cpp  Sprite.cpp  Text.cpp  TextButtton.cpp
src/b2ge/Core/: BaseGame.cpp  Entity.cpp  Scene.cpp  System.cpp  World.cpp
src/b2ge/Manager/: EntityManager.cpp  ResourceManager.cpp  SceneManager.cpp  SystemManager.cpp
src/b2ge/System/: AnimatedSpriteRendererSystem.cpp  ButtonSystem.cpp  SpriteRendererSystem.cpp  SpriteSystem.cpp  TextButtonSystem.cpp  TextSystem.cpp
src/b2ge/Util/: Debug.cpp
tests/: CMakeLists.txt  Components.hpp  Systems.hpp  TestEntities.cpp  TestSystem.cpp  TestWorld.cpp  main.cpp
